Space after method name in declarations

--- a/pascal-format.new.cfg
+++ b/pascal-format.new.cfg
@@ -38,7 +38,7 @@
     <SpacesToTabs> False </SpacesToTabs>
     <SpacesPerTab> 2 </SpacesPerTab>
     <SpacesForTab> 0 </SpacesForTab>
-    <FixSpacing> False </FixSpacing>
+    <FixSpacing> True </FixSpacing>
     <SpaceBeforeClassHeritage> False </SpaceBeforeClassHeritage>
     <SpacesBeforeColonVar> 0 </SpacesBeforeColonVar>
     <SpacesBeforeColonConst> 0 </SpacesBeforeColonConst>
@@ -53,7 +53,7 @@
     <UseMaxSpacesInCode> False </UseMaxSpacesInCode>
     <SpaceForOperator> 0 </SpaceForOperator>
     <SpaceBeforeOpenBracketsInFunctionDeclaration> True </SpaceBeforeOpenBracketsInFunctionDeclaration>
-    <SpaceBeforeOpenBracketsInFunctionCall> True </SpaceBeforeOpenBracketsInFunctionCall>
+    <SpaceBeforeOpenBracketsInFunctionCall> False </SpaceBeforeOpenBracketsInFunctionCall>
     <SpaceBeforeOpenSquareBracketsInExpression> False </SpaceBeforeOpenSquareBracketsInExpression>
     <SpaceAfterOpenBrackets> False </SpaceAfterOpenBrackets>
     <SpaceBeforeCloseBrackets> False </SpaceBeforeCloseBrackets>
